# Inverted_Pendulum

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: lip.yaml
control/: control_pid.py  control_sample.py
launch/: inv_pend.launch  rviz.launch
urdf/: lip.urdf  lip_rviz.urdf
