<?xml version="1.0"?>
<package format="2">
  <name>inv_pend</name>
  <version>0.0.0</version>
  <description>The inv_pend package</description>


  <maintainer email="tarunthathvik@todo.todo">Thathvik</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
